Added verify email & send email functionality.
